# ros_openpose_gossip

./: README.md
ros_openpose_gossip_actions/: CMakeLists.txt  package.xml
ros_openpose_gossip_examples/: CMakeLists.txt  package.xml
ros_openpose_gossip_examples/launch/: test_on_pepper.launch  test_on_webcam.launch
ros_openpose_gossip_examples/scripts/: Test_OpenPoseGossip.py  Test_OpenPoseGossip_withFile.py  Test_OpenPoseGossip_withPepper.py  Test_OpenPoseGossip_withPepperCamTopic.py  Test_OpenPoseGossip_withWebCam.py
ros_openpose_gossip_examples/scripts/naoqi_access/: head_mvt.py
ros_openpose_gossip_msgs/: CMakeLists.txt  package.xml
ros_openpose_gossip_msgs/msg/: PersonGossip.msg  PersonsGossip.msg
ros_openpose_gossip_node/: CMakeLists.txt  package.xml
ros_openpose_gossip_node/scripts/: OpenPoseGossip_node.py
ros_openpose_gossip_node/scripts/process/: BoundingBoxes.py  OpenPoseGossip.py  RawPoseIndex.py
ros_openpose_gossip_srvs/: CMakeLists.txt  package.xml
ros_openpose_gossip_srvs/srv/: OpenPoseGossip.srv
